[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sre-triage-pipeline"
version = "1.0.0"
description = "OpenEnv-compliant SRE incident triage environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai>=1.52.0",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "environment*", "server*"]
